# leetcode_nvim

./: README.md  mkdocs.yml  pyproject.toml
docs/: todo.md
src/leetcode/: 1.two-sum.py  1.two-sum.python2.py  118.pascals-triangle.py  1189.maximum-number-of-balloons.py  1268.search-suggestions-system.py  13.roman-to-integer.py  136.single-number.py  1388.pizza-with-3n-slices.py  13_roman-to-integer.py  14.longest-common-prefix.py  145.binary-tree-postorder-traversal.py  15.3sum.py  1502.can-make-arithmetic-progression-from-sequence.py  1534.count-good-triplets.py  1725.number-of-rectangles-that-can-form-the-largest-square.py  2.add-two-numbers.python2.py  20.valid-parentheses.py  21.merge-two-sorted-lists.py  2150.find-all-lonely-numbers-in-the-array.py  217.contains-duplicate.py  234.palindrome-linked-list.py  2399.check-distances-between-same-letters.py  2413.smallest-even-multiple.py  26.remove-duplicates-from-sorted-array.py  2605.form-smallest-number-from-two-digit-arrays.py  268.missing-number.py  274.h-index.python2.py  303.range-sum-query-immutable.py  3033.modify-the-matrix.py  3048.earliest-second-to-mark-indices-i.py  3174.clear-digits.py  3304.find-the-k-th-character-in-string-game-i.py  554.brick-wall.py  657.robot-return-to-origin.py  66.plus-one.py  67.add-binary.py  705.design-hashset.py  706.design-hashmap.py  821.shortest-distance-to-a-character.py  862.shortest-subarray-with-sum-at-least-k.py  (+2 more)
src/leetcode/solved/: 144.binary-tree-preorder-traversal.md  1507.reformat-date.md  20.valid-parentheses.md  (+8 more)
tests/leetcode/: test_1_two-sum.py
