[project]
name = "LEETCODE"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Dominik Ocsofszki", email = "dominikocsofszki@gmail.com"},
]
dependencies = ["pytest>=8.3.3"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests", "integration"]
addopts = "-vv -ra -q"
# log_cli = true
# log_cli_level = "INFO"
# log_format = "%(asctime)s %(levelname)s %(message)s"
# log_date_format = "%Y-%m-%d %H:%M:%S"
# minversion = "6.0"
# filterwarnings = "ignore"
# norecursedirs = docs build

