[project]
name = "LEETCODE"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Dominik Ocsofszki", email = "dominikocsofszki@gmail.com"},
]
dependencies = ["pytest>=8.3.3", "mkdocs>=1.6.1", "pylint>=3.3.1", "ruff>=0.7.4", "watchfiles>=0.24.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = ""}


[tool.pdm]
distribution = false

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests", "integration"]
addopts = "-vv -ra -q"

[tool.pdm.scripts]
docs = "mkdocs serve -o"
